# rust-web-service

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  run.sh  test_auth.sh
.github/: README.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  security.yml
apidocs/: API_REFERENCE.md  QUICK_START.md  README.md  openapi.yaml  postman_collection.json
benches/: auth_benchmarks.rs  http_benchmarks.rs
migrations/: 001_create_auth_users.sql
spec/: TECHNICAL_SPEC.md
src/: config.rs  errors.rs  main.rs
src/handlers/: auth_handlers.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: auth_user.rs
src/routes/: auth_routes.rs  mod.rs
src/services/: auth_service.rs
