[package]
name = "rust-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.6"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.17"
jsonwebtoken = "9.2"
thiserror = "2.0"
anyhow = "1.0"
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
actix-web-validator = "5.0"
env_logger = "0.10"
log = "0.4"
once_cell = "1.19"
regex = "1.10"
futures-util = "0.3"
